--- a/meetings/2015-10-21.md
+++ b/meetings/2015-10-21.md
@@ -5,10 +5,12 @@
 
 ### Invited Talk
 
-* Christian Landry
+* [Dr. Christian Landry]http://landrylab.ibis.ulaval.ca/
 
 ### Details
 
-where-when-what-...
+3:30 - 5:00 p.m.
+Life Sciences Institute, Room 1.510
+Post meeting chat until 7 pm!
 
 
