--- a/meetings/2015-11-25.md
+++ b/meetings/2015-11-25.md
@@ -8,6 +8,6 @@
 * [Dr. Ben Shay-Aroya](http://research.biu.ac.il/content/dr-ben-aroyas-lab-0)
 
 ### Details
-3:30 - 5:00 p.m,
+3:30 - 5:00 p.m. Nov 25 2015
 Life Sciences Institute, Room 1.510.
 Post-meeting chat until 7 pm!
