--- a/meetings/2016-03-23.md
+++ b/meetings/2016-03-23.md
@@ -2,9 +2,9 @@
 
 * Conibear Lab
 * Otto Lab
-* Kobor Lab (tentative)
+* Howe Lab 
 
 ### Details
-3:30 - 5:00 p.m,
-Life Sciences Institute, Room 1.510.
-Post-meeting chat until 7 pm!
+- 3:30 - 5:00 p.m, Wed Mar 23, 2016
+- Life Sciences Institute, Room 1.510.
+- Post-meeting chat until 7 pm!
