--- a/meetings/2016-05-25.md
+++ b/meetings/2016-05-25.md
@@ -5,6 +5,6 @@
 * Giaever+Nislow Lab
 
 ### Details
-3:30 - 5:00 p.m,
-Life Sciences Institute, Room 1.510.
-Post-meeting chat until 7 pm!
+- 3:30 - 5:00 p.m, Wed May 25, 2016
+- Life Sciences Institute, Room 1.510.
+- Post-meeting chat until 7 pm!
